--- a/nodejs/node-rdkafka/package.json
+++ b/nodejs/node-rdkafka/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.3",
     "dotenv": "16.0.0",
     "node-rdkafka": "2.12.0"
   }
